--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -15,11 +15,12 @@
   },
   "dependencies": {
     "history": "^4.7.2",
+    "prop-types": "^15.6.0",
     "re-base": "^3.2.1",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
-    "react-router": "^4.2.0"
+    "react-router-dom": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
